<resources>
    <string name="app_name">RunnerBe-Android</string>
    <string name="runner_be">러너비</string>
    <string name="login_kakao">카카오로 로그인</string>
    <string name="login_naver">네이버로 로그인</string>
    <string name="error_failed">잠시 후에 다시 시도해주세요.</string>
    <string name="dialog_pace_exit">페이스 등록을 취소하시겠어요?</string>
    <string name="dialog_image_crop_exit">사진 편집을 취소하시겠어요?</string>
    <string name="dialog_image_crop_save">변경 사항을 저장하시겠어요?</string>
    <string name="toast_back_press_twice">한번 더 뒤로가기 버튼을 누르면 종료됩니다</string>
    <string name="toast_weather_degree">기온을 입력해주세요</string>
    <string name="toast_stamp_missing">스탬프를 선택해주세요!</string>
    <string name="toast_weather_missing">날씨를 선택해주세요!</string>
    <string name="toast_error_move_to_current_location">현재 위치 정보를 가져올 수 없어요</string>
    <string name="toast_error_pace_selected_empty">페이스 난이도를 선택해주세요</string>
    <string name="permission_denied_camera">카메라 권한이 허용되지 않았습니다.\n설정에서 권한을 허용해주세요.</string>
    <string name="comma_text">%s · %s</string>
    <string name="setting">설정</string>
    <string name="job">직군</string>
    <string name="filter">필터</string>
    <string name="post_write">게시글 작성</string>
    <string name="book_mark_list">찜 목록</string>
    <string name="running_talk">러닝톡</string>
    <string name="title">제목</string>
    <string name="date">일시</string>
    <string name="hour">시간</string>
    <string name="minute">분</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="camera">촬영</string>
    <string name="album">앨범에서 선택</string>
    <string name="terms_of_service">이용 약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="use_a_location_service">위치기반 서비스 이용약관</string>
    <string name="creators">만든 사람들</string>
    <string name="join_runner">참여한 러너</string>
    <string name="written_post">작성한 글</string>
    <string name="join_running">참여 러닝</string>
    <string name="running_list">러닝 목록</string>
    <string name="logout">로그아웃</string>
    <string name="msg_empty_my_post">아직 모임을 만들지 않았어요!</string>
    <string name="msg_empty_join_post">아직 러닝에 참여하지 않았어요!</string>
    <string name="msg_go_my_post">모임을 만들어볼까요?</string>
    <string name="msg_go_join_post">참여해볼까요?</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <string name="confirm">확인</string>
    <string name="next">다음</string>
    <string name="enrollment">등록</string>
    <string name="save">저장</string>
    <string name="do_enrollment">등록하기</string>
    <string name="do_delete">삭제하기</string>
    <string name="delete_complete">삭제가 완료되었어요!</string>
    <string name="gender">성별</string>
    <string name="age">연령</string>
    <string name="all">전체</string>
    <string name="female">여성</string>
    <string name="male">남성</string>
    <string name="has_exist">있음</string>
    <string name="has_not_exist">없음</string>
    <string name="max_people_count">최대 %s명</string>
    <string name="gender_string">%s만</string>
    <string name="question_logout">로그아웃 하시겠어요?</string>
    <string name="question_withdrawal">탈퇴하면 모든 러너 정보가 삭제돼요. 정말 탈퇴하시겠어요?</string>
    <string name="login_naver_client_id">J_xcObueopdEQFV91h0W</string>
    <string name="login_naver_client_secret">tdcIn3fah3</string>
    <string name="kakao_native_key">5820a967bb81030d649333f17f04f062</string>
    <string name="msg_network_error_title">오프라인 상태예요!</string>
    <string name="msg_network_error_content">네트워크를 연결해주세요.</string>
    <string name="ready">준비됐어요!</string>
    <string name="after_party_exist">뒷풀이 있음</string>
    <string name="after_party_not_exist">뒷풀이 없음</string>
    <string name="msg_terms_all_check">모든 약관을 읽었으며, 이에 동의해요.</string>
    <string name="terms_of_use_a_service_agreement">[필수] 서비스 이용약관 동의</string>
    <string name="terms_of_use_a_privacy_agreement">[필수] 개인정보 수집/이용 동의</string>
    <string name="terms_of_use_a_location_service_agreement">[필수] 위치기반 서비스 이용약관 동의</string>
    <string name="msg_year_enter">출생년도를 입력해주세요.</string>
    <string name="msg_year_use_description">정확한 나이는 공개되지 않아요!\n20대 초반, 30대 중반 등으로 표기될 거예요.</string>
    <string name="description_age_limit">19세 미만은 이용할 수 없어요!</string>
    <string name="msg_gender_select">성별을 선택해주세요.</string>
    <string name="msg_job_select">어떤 직군에서 활동하시나요?</string>
    <string name="description_job_select">추후 마이페이지에서 수정할 수 있어요!</string>
    <string name="msg_additional_info_complete">나를 충분히 소개했어요.\n달릴 준비 완료!</string>
    <string name="msg_additional_info_complete_description">이제 러너비에서 함께 달려볼까요?</string>
    <string name="already_run">달릴 준비 완료!</string>
    <string name="by_distance">거리순</string>
    <string name="newest">최신순</string>
    <string name="with_finish">마감 포함</string>
    <string name="empty_post">현재 모임이 없어요!</string>
    <string name="empty_post_filter">조건에 맞는 검색 결과가 없어요.</string>
    <string name="refresh_this_location">이 지역 재검색</string>
    <string name="question_post_close">신청을 마감하시겠어요?</string>
    <string name="msg_post_close">신청이 마감되었어요!</string>
    <string name="question_post_apply">신청하시겠어요?</string>
    <string name="msg_post_apply">모임에 신청하셨어요!</string>
    <string name="no_location_info">확인 불가</string>
    <string name="applied_runner">신청한 러너</string>
    <string name="do_refuse">거절하기</string>
    <string name="do_accept">수락하기</string>
    <string name="do_post_close">마감하기</string>
    <string name="do_post_apply">신청하기</string>
    <string name="apply_complete">신청완료</string>
    <string name="post_close_complete">모집완료</string>
    <string name="all_work">전체</string>
    <string name="before_work">출근 전</string>
    <string name="after_work">퇴근 후</string>
    <string name="holiday">휴일</string>
    <string name="msg_running_time_limit">모임은 최대 5시간까지 가능해요!</string>
    <string name="running_location">모임 장소</string>
    <string name="play_time">소요 시간</string>
    <string name="hint_running_title">ex) A 직군 모여라, 묵언 러닝 하실 분, 마라톤 완주!</string>
    <string name="timeFormat">%s 시간 %2d 분</string>
    <string name="recruitment_gender">모집 성별</string>
    <string name="recruitment_count">모집 인원</string>
    <string name="recruitment_age">모집 연령</string>
    <string name="all_age">모든 연령</string>
    <string name="recruitment_content">하고싶은 말 (선택)</string>
    <string name="after_party">뒤풀이</string>
    <string name="msg_recruitment_count_minimum">모임 인원은 최소 2명부터 가능해요!</string>
    <string name="msg_recruitment_count_maximum">모임 인원은 최대 8명까지 가능해요!</string>
    <string name="hint_content_write">함께할 러너들에게 하실 말씀이 있나요?\nex) ㅇㅇ마트 앞에서 만나요~</string>
    <string name="limit_five_hundred">%s/500</string>
    <string name="display_recruitment_age_setting">%s세 - %s세</string>
    <string name="question_running_write">글을 등록하시겠어요?</string>
    <string name="complete_running_write">글이 등록되었어요!</string>
    <string name="recruiting">모집중</string>
    <string name="recruitment_deadline">모집 마감</string>
    <string name="recruitment_end">모집 종료</string>
    <string name="running_location_search">장소 정보 입력</string>
    <string name="running_location_search_hint">모임 장소 검색</string>
    <string name="running_location_detect_current">현재 위치로 설정</string>
    <string name="running_location_search_description">이렇게 검색해 보세요</string>
    <string name="running_location_search_description_a_1">도로명 + 건물번호</string>
    <string name="running_location_search_description_a_2">예) 러너비로 12길 3</string>
    <string name="running_location_search_description_b_1">지역명 + 번지</string>
    <string name="running_location_search_description_b_2">예) 러너비동 12–3</string>
    <string name="running_location_search_description_c_1">건물명, 아파트명</string>
    <string name="running_location_search_description_c_2">예) 러너비아파트 101동</string>
    <string name="running_location_search_detail_edit">주소 수정</string>
    <string name="running_location_search_detail_confirm">주소 등록</string>
    <string name="running_location_search_detail_hint_1">상세 설명</string>
    <string name="running_location_search_detail_hint_2">모임 장소 상세 설명을 입력하세요.</string>
    <string name="report">신고</string>
    <string name="msg_warning_report">부적절한 신고는 수락되지 않으며,활동 제재의 원인이 될 수 있습니다.정말 신고하시겠어요?</string>
    <string name="report_complete">신고처리 되었습니다.</string>
    <string name="image_count_alert">이미지는 3장까지만 업로드할 수 있어요</string>
    <string name="attendance_manage">출석 관리</string>
    <string name="attendance_managing">출석 관리하기</string>
    <string name="attendance_see">출석 확인하기</string>
    <string name="do_submit">제출하기</string>
    <string name="lets_add_stamp">이 달의 스탬프를 채워봐요!</string>
    <string name="title_attendance">참여한 러닝</string>
    <string name="msg_attendance_waiting">러닝 후에 출석을 관리해주세요</string>
    <string name="msg_attendance_complete">출석을 완료했어요 😎</string>
    <string name="msg_not_attendance_check">출석을 체크하지 않았어요 😣</string>
    <string name="msg_not_attendance_complete">불참했어요 😭</string>
    <string name="absent">결석</string>
    <string name="present">출석</string>
    <string name="do_profile_edit">프로필 수정하기</string>
    <string name="pace_registration_description">페이스를 등록하세요!</string>
    <string name="pace_edit">페이스 수정하기</string>
    <string name="joined_running_empty">참여한 러닝이 없어요</string>
    <string name="msg_impossible_nickname_change">* 닉네임 변경이 완료되어 추가 변경은 불가능해요!</string>
    <string name="msg_possible_nickname_change">* 닉네임은 딱 한 번만 바꿀 수 있어요!</string>
    <string name="question_nickname_change">닉네임 변경은 1회만 가능하며 재변경은 불가능해요!\n정말 변경하시겠어요?</string>
    <string name="hint_nickname_change">8자 이내 (영어 소문자/한글/숫자)</string>
    <string name="msg_job_change_info">직군은 3개월에 한 번 변경할 수 있어요!</string>
    <string name="question_job_change">직군 변경은 3개월에 1회 가능해요.\n변경하시겠어요?</string>
    <string name="my_job">나의 직군</string>
    <string name="double_check">중복확인</string>
    <string name="pace_regist">페이스 등록</string>
    <string name="pace_regist_with_emoji">페이스 등록</string>
    <string name="pace_level">페이스 난이도</string>
    <string name="pace_regist_description_title">나의 러닝 페이스를 선택해주세요!</string>
    <string name="pace_regist_description">페이스는 1km당 달리는데 걸리는 시간에 대한\n나의 러닝 페이스를 의미해요.</string>
    <string name="pace_complete_title">페이스 %s \n등록 완료!</string>
    <string name="pace_complete_description">페이스는 언제든 수정할 수 있어요.</string>
    <string name="finished_enrollment">등록완료</string>
    <string name="consider_more">더 고민할래요!</string>
    <string name="complete_change_nickname">닉네임이 변경되었어요!</string>
    <string name="complete_change_profile_image">이미지를 변경했어요!</string>
    <string name="complete_change_job">직업군이 변경되었어요!</string>
    <string name="default_nickname">내 소개 전이에요.</string>
    <string name="error_double_check">중복된 닉네임이에요!</string>
    <string name="error_re_start">다시 시도해주세요.</string>
    <string name="position_plan">Plan</string>
    <string name="position_server">Server</string>
    <string name="position_design">Design</string>
    <string name="position_android">AOS</string>
    <string name="position_apple">IOS</string>
    <string name="eunseo">은서</string>
    <string name="seungwan">승완</string>
    <string name="jeong">정</string>
    <string name="juhee">쥬쥬</string>
    <string name="niaka">나이아카</string>
    <string name="loki">로키</string>
    <string name="joy">조이</string>
    <string name="changgyu">창규</string>
    <string name="before_running_management_button_text">모임 후 출석/로그를 관리할 수 있어요</string>
    <string name="log_write">로그 쓰기</string>
    <string name="psv_and_icon">🏫  공무원</string>
    <string name="edu_and_icon">📚 교육</string>
    <string name="dev_and_icon">🖥 개발</string>
    <string name="psm_and_icon">📈  기획/전략/경영</string>
    <string name="des_and_icon">🎨  디자인</string>
    <string name="mpr_and_icon">📊  마케팅/PR</string>
    <string name="ser_and_icon">⚙  서비스</string>
    <string name="weather_title">날씨</string>
    <string name="weather_temperature_title">기온</string>
    <string name="weather_temperature_hint">기온을 입력하세요!</string>
    <string name="weather_temperature_unit">ºC</string>
    <string name="stamp_apply">적용하기</string>
</resources>