<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.applemango.presentation.ui.screen.fragment.map.address.RunningAddressSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_g7"
        tools:context=".ui.screen.fragment.map.address.RunningAddressSearchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/running_search_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"
                android:src="@drawable/ic_close_g4"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/top_txt"
                style="@style/TextStyleHead18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/running_location_search"
                android:textColor="@color/dark_g3_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_dark_6g_solid_radius_6"
            android:paddingStart="18dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/running_search_top">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search"
                android:textCursorDrawable="@drawable/cursor_primary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_search"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                app:counterEnabled="false"
                app:endIconMode="clear_text"
                app:endIconTint="@null"
                app:endIconDrawable="@drawable/ic_search_clear"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_search"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/tie_search"
                    style="@style/TextStyleBody16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/running_location_search_hint"
                    android:includeFontPadding="false"
                    android:textCursorDrawable="@drawable/cursor_primary"
                    android:inputType="text"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textColorHint="@color/dark_g3_5" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_location_detect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="6dp"
            android:paddingVertical="10dp"
            android:paddingStart="18dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/const_search">

            <ImageView
                android:id="@+id/iv_location_detect"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_location_detect"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_location_detect"
                style="@style/TextStyleBody16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/running_location_detect_current"
                android:textColor="@color/dark_g3_5"
                app:layout_constraintStart_toEndOf="@+id/iv_location_detect"
                app:layout_constraintTop_toTopOf="@+id/iv_location_detect"
                app:layout_constraintBottom_toBottomOf="@+id/iv_location_detect" />

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_right_arrow_16"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_location_detect"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/titleIndicator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="6dp"
            android:background="@color/dark_g6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/const_location_detect" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/titleIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_result_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/titleIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_search_result_empty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="검색 결과가 없습니다"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/pretendard_regular"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/dark_g3" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_search_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="25dp"
            android:paddingHorizontal="6dp"
            android:paddingVertical="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/titleIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/TextStyleHead18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running_location_search_description"
                android:fontFamily="@font/pretendard_regular"
                android:textColor="@color/dark_g3" />

            <TextView
                style="@style/TextStyleHead16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/running_location_search_description_a_1"
                android:textColor="@color/dark_g3" />

            <TextView
                style="@style/TextStyleBody16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/running_location_search_description_a_2"
                android:textColor="@color/dark_g3_5" />

            <TextView
                style="@style/TextStyleHead16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/running_location_search_description_b_1"
                android:textColor="@color/dark_g3" />

            <TextView
                style="@style/TextStyleBody16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/running_location_search_description_b_2"
                android:textColor="@color/dark_g3_5" />

            <TextView
                style="@style/TextStyleHead16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/running_location_search_description_c_1"
                android:textColor="@color/dark_g3" />

            <TextView
                style="@style/TextStyleBody16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/running_location_search_description_c_2"
                android:textColor="@color/dark_g3_5" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>