<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_g5_5_round_dialog"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_top_bar"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_gray_underbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_weather_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/pretendard_regular"
            android:textStyle="bold"
            android:text="@string/weather_title"
            android:textColor="@color/dark_g2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_top_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingEnd="24dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_temperature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/pretendard_regular"
            android:textStyle="bold"
            android:text="@string/weather_temperature_title"
            android:textColor="@color/dark_g2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rcv_weather" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_degree"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp"
            android:fontFamily="@font/pretendard_regular"
            app:counterEnabled="false"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:endIconDrawable="@drawable/ic_search_clear"
            app:hintEnabled="false"
            android:background="@drawable/bg_dark_5g_radius_8"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_temperature_unit">

            <EditText
                android:id="@+id/tie_degree"
                style="@style/TextStyleBody16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/weather_temperature_hint"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/dark_g1"
                android:textColorHint="@color/dark_g3_5"
                android:inputType="numberSigned"
                android:paddingHorizontal="12dp"
                android:textCursorDrawable="@drawable/cursor_primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_temperature_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/pretendard_regular"
            android:textStyle="bold"
            android:text="@string/weather_temperature_unit"
            android:textColor="@color/dark_g2"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="@id/til_degree"
            app:layout_constraintBottom_toBottomOf="@id/til_degree"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_my_page_yet_running_custom"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/stamp_apply"
            android:textColor="@color/tc_enable_dark3_5g_black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/til_degree" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>